# Vulpes-Celare

./: .editorconfig  .eslintrc.json  .gitattributes  .gitignore  .mcp.json  AGENTS.md  AGPL_IMPLEMENTATION_COMPLETE.md  AUDIT.txt  CHANGELOG.md  CHANGES_MADE.md  CLAUDE.md  CODEX.md  COMPREHENSIVE-SYSTEM-TEST-REPORT.md  CONTRIBUTING.md  CONTRIBUTING_CLA.md  DEPLOYMENT-README.md  DEPLOYMENT_PROTOCOL.md  DOCUMENTATION_CLEANUP_COMPLETE.md  DOCUMENTATION_UPDATE.md  HANDOFF-REALISTIC-TESTING.md  HIPAA_COMPLIANCE.md  IMPLEMENTATION_PLAN.md  INSTRUCTIONS_FOR_AI_AGENTS.md  LICENSE  LICENSE-EVALUATION.txt  LICENSE_CHANGE_SUMMARY.md  MCP_SETUP_COMPLETE.md  NAME_CORRECTION_COMPLETE.md  NOTICE  QUICK-REFERENCE.txt  QUICK_START.md  README.md  RUST_IMPLEMENTATION_STATUS.md  SECURITY.md  TEST-EXECUTION-SUMMARY.md  UX_IMPROVEMENTS.md  auto-deploy-phase1.ps1  config.toml  debug-parallel.js  debug_output.txt  (+8 more)
.agent/: CLAUDE.md
.backups/: SmartNameFilterSpan-before-phase1.ts
.claude/: config.toml  settings.json  settings.local.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
docs/: ACCURATE_FEATURE_AUDIT_v3.md  ARCHITECTURE.md  ASSESSMENT-SUMMARY.md  BENCHMARKS.md  BEYOND_ELITE_MASTERPLAN_v2.md  CLI.md  CLI_LOGGING_AUDIT_AND_MASTERPLAN.md  COMPREHENSIVE-ASSESSMENT.md  ELITE_LLM_GUIDANCE_PLAN.md  ELITE_OUTPUT_MASTERPLAN.md  FEATURE_COMPARISON.md  HIPAA.md  IMAGE-DICOM.md  POST-DEV-FIXES.md  README.md  ROADMAP.md  RUST-NATIVE.md  SESSION_ISSUES.md  STRICT_MODE_AND_CONFIG_EXTERNALIZATION_PLAN.md  TECHNICAL_DEBT_REMEDIATION.md  TROUBLESHOOTING.md  TRUST-BUNDLE.md  VALIDATION-METHODOLOGY.md  provenance-spec.md
examples/: basic-usage.ts
native/: vulpes_core.win32-x64-msvc.node
scripts/: analyze-results.js  benchmark-presidio.js  build-dictionaries.js  build-gpu.js  build-native.js  check-onnx-boundary.js  clean-dist.js  copy-assets.js  download-ort.js  download_models.py  fit-calibrator.js  fix-claude-settings.js  install-global.js  install-native.js  load-hipaa-knowledge.js  optimize-weights.js  presidio-bridge.py  profile-filters.js  quantize-models.py  setup-mcp.js  setup.js  test-shadow-diffs.js  test_integration.ts  test_simple.js
src/: PolicyDSL.ts  RedactionEngine.ts  StreamingRedactor.ts  SupervisedStreamingRedactor.ts  TextAccel.ts  VulpesCelare.ts  VulpesNative.ts  index.ts  meta.ts  shutdown.ts
src/cli/: CLI.ts  (+14 more)
src/rust/: Cargo.toml
src/rust/src/: apply.rs  chaos.rs  crypto.rs  fuzzy.rs  interval.rs  lib.rs  name.rs  name_stream.rs  phonetic.rs  postfilter.rs  scan.rs  scan_stream.rs  scorer.rs  span.rs  streaming.rs  tokenize.rs
src/rust/src/vision/: face.rs  gpu_provider.rs  mod.rs  ocr.rs
templates/: CLAUDE_TEMPLATE.md  CODEX_AGENTS_TEMPLATE.md  (+1 more)
(+586 files in other folders)
