[package]
name = "vulpes-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = []
# Enable DirectML GPU acceleration (Windows only)
# Requires ONNX Runtime built with DirectML support
directml = []
# Enable CUDA GPU acceleration (NVIDIA GPUs)
# Requires ONNX Runtime built with CUDA support
cuda = []

[dependencies]
# NAPI-RS: The Bridge
napi = { version = "2.16", default-features = false, features = ["napi4", "async", "tokio_rt"] }
napi-derive = "2.16"

# Crypto / provenance
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rphonetic = "3.0"
regex = "1.11"
lazy_static = "1.5"

# Deep Learning Inference
# GPU acceleration is controlled by environment variable VULPES_GPU_PROVIDER
# Set to "directml" (Windows) or "cuda" (NVIDIA) to enable GPU
# Falls back to CPU if GPU is unavailable
ort = { version = "=2.0.0-rc.10", features = ["load-dynamic", "ndarray"] }

# Image Processing
image = "0.25"
imageproc = "0.25"

# Logic Engine Support
tokenizers = { version = "0.19", default-features = false, features = ["onig"] }
once_cell = "1.19"

# Numerical Computing
ndarray = "0.16"

# Parallelism
rayon = "1.10"

# Logging & Diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }

[profile.dev]
incremental = false

[profile.release]
incremental = false

[build-dependencies]
napi-build = "2.1.3"
